update from DS (1085,1086,1088,1097,1103)
版本: 1103
作者: chihwen
日期: 2013年6月3日 上午 10:54:14
訊息:
將 9x9 production SVN 版本 4781,4794 轉回 fakeapi 分支

1. 將 9x9 production SVN 版本 4781,4794 轉回 fakeapi 分支。
2. 同步 src 版本 1100,1101。
   1. 移除已用不到的檔案
   2. 從 teltel_ui 版本 1091,1095,1096 轉入 src 分支 (主要是 1091 這個版本)
issue 5927
----
異動 : /fakeapi/channel-add.html
異動 : /fakeapi/channel-poi.html
異動 : /fakeapi/channel-setting.html
異動 : /fakeapi/episode-list.html
已加入 : /fakeapi/images/bg_tip_l.png
已加入 : /fakeapi/images/btn_func.png
異動 : /fakeapi/index.html
異動 : /fakeapi/javascripts/channel.js
異動 : /fakeapi/javascripts/controller.js
已刪除 : /fakeapi/javascripts/library.js
異動 : /fakeapi/javascripts/signin.js
已刪除 : /fakeapi/javascripts/uploads.js
異動 : /fakeapi/lang/en.json
異動 : /fakeapi/lang/zh.json
異動 : /fakeapi/signin.html
異動 : /fakeapi/stylesheets/channel.css
異動 : /fakeapi/stylesheets/episode.css
已刪除 : /fakeapi/stylesheets/library.css
異動 : /fakeapi/stylesheets/style.css

版本: 1097
作者: chihwen
日期: 2013年6月2日 下午 08:23:45
訊息:
完成 Channel POI API 串接

1. 完成 Channel POI template 模板設計。
2. 完成 Channel POI 多國語系與未儲存提示設計。
3. 完成 Channel POI 影片定格預載及快取設計。
4. 完成 Channel POI 單筆 POI 維護管控設計。
5. 完成 Channel POI API CRUD 串接設計。
6. 將 Channel POI, Channel setting, Episode list 的左側選單，統一採用 template 改寫 (func-nav-tmpl)。
7. 調整 POI fakeapi 以便模擬 Channel POI 及 Episode POI 資料新增行為。
8. 調整 config.js 加入 YOUTUBE_PLAYER 以便存放全域的 YouTube 影片播放物件。
9. 調整 controller.js 加入 buildChannelPoi() 以便負責 Channel POI 初始載入建構邏輯。
10. 調整 controller.js 在 html 加入 lang 屬性，以便未來語系 :lang(zh) 樣式的應用。
11. 調整 curation.js 比照 Channel POI 的校正，同步修正 curation.js 上的錯誤以及 iOS 截字邏輯。
12. 重構 channel-poi.js 以便通過 JSLint 檢查。
13. 重構 config.js 以便通過 JSLint 檢查。
14. 重構 basic.js 以便通過 JSLint 檢查。
15. 重構 controller.js 以便通過 JSLint 檢查。
16. 同步 src 版本 1089,1090,1092,1094。

TODO：
比照 Channel POI 的調整，同步改良 Episode POI 的相關設計。
issue 6423
----
異動 : /fakeapi/channel-poi.html
異動 : /fakeapi/channel-setting.html
異動 : /fakeapi/episode-list.html
異動 : /fakeapi/javascripts/channel-poi.js
異動 : /fakeapi/javascr

--- a/lang/en.json
+++ b/lang/en.json
@@ -59,7 +59,7 @@
             "Not right now, thanks!":                                                                                                           "Not right now, thanks!"
         },
         "facebook": {
-            "You will change the order of channel list to \"update time\", it will sort by update time of channels automatically so you can't change the order manually except set on top channels.":"You will change the order of channel list to \"update time\", it will sort by update time of channels automatically so you can't change the order manually except set on top channels.",
+            "You will change the order of channel list to \"update time\", it will sort by update time of channels automatically so you can't change the order manually except set on top channels.": "You will change the order of channel list to \"update time\", it will sort by update time of channels automatically so you can't change the order manually except set on top channels.",
             "CMS Setup":                                                                                                                        "CMS Setup",
             "Connect to":                                                                                                                       "Connect to",
             "After connecting, you can enable Facebook auto sharing for each channel in Channel settings.":                                     "After connecting, you can enable Facebook auto sharing for each channel in Channel settings.",
@@ -320,6 +320,7 @@
             "Views":                                                                                                                            "Views",
             "Update:":                                                                                                                          "Update:",
             "Curate a new episode":                                                                                                             "Curate a new episode",
+            "Channel POI":                                                                                                                      "Channel POI",
             "Episode list":                                                                                                                     "Episode list",
             "Channel settings":                                                                                                                 "Channel settings",
             "Delete this channel":                                                                                                              "Delete this channel",
@@ -334,6 +335,7 @@
         },
         "func-nav": {
             "Episode list":                                                                                                                     "Episode list",
+            "Channel POI":                                                                                                                      "Channel POI",
             "Settings":                                                                                                                         "Settings"
         },
         "title-func": {
@@ -379,12 +381,76 @@
             "Save":                                                                                                                             "Save"
         }
     },
+    "channel-poi": {
+        "html-title": {
+            "9x9.tv - Channel POI":                                                                                                             "9x9.tv - Channel POI"
+        },
+        "func-nav": {
+            "Episode list":                                                                                                                     "Episode list",
+            "Channel POI":                                                                                                                      "Channel POI",
+            "Settings":                                                                                                                         "Settings"
+        },
+        "poi-event": {
+            "+ Create Channel POI & interactive event":                                                                                         "+ Create Channel POI & interactive event",
+            "Channel POI & interactive event list":                                                                                             "Channel POI & interactive event list",
+            "Create a channel interactive event and call to action message at a point of interaction.":                                         "Create a channel interactive event and call to action message at a point of interaction.",
+            "Please create an episode at least in the channel.":                                                                                "Please create an episode at least in the channel.",
+            "You cannot have more than one Channel POI & interactive event.":                                                                   "You cannot have more than one Channel POI & interactive event.",
+            "Create Channel POI & interactive event":                                                                                           "Create Channel POI & interactive event",
+            "Edit Channel POI & interactive event":                                                                                             "Edit Channel POI & interactive event",
+            "Create POI":                                                                                                                       "Create POI",
+            "Edit POI":                                                                                                                         "Edit POI",
+            "Required field":                                                                                                                   "Required field",
+            "Name":                                                                                                                             "Name",
+            "Tags":                                                                                                                             "Tags",
+            "Separate with commas":                                                                                                             "Separate with commas",
+            "Cancel":                                                                                                                           "Cancel",
+            "Next":                                                                                                                             "Next",
+            "Save":                                                                                                                             "Save",
+            "Please fill in all required fields.":                                                                                              "Please fill in all required fields.",
+            "Add interactive event":                                                                                                            "Add interactive event",
+            "Choose a type":                                                                                                                    "Choose a type",
+            "Coming Soon":                                                                                                                      "Coming Soon",
+            "Scheduled Notification":                                                                                                           "Scheduled Notification",
+            "Send a scheduled notification to user to get more information.":                                                                   "Send a scheduled notification to user to get more information.",
+            "Instant Notification":                                                                                                             "Instant Notification",
+            "Send an instant notification to user to get more information.":                                                                    "Send an instant notification to user to get more information.",
+            "POI":                                                                                                                              "POI",
+            "Interactive event : Scheduled Notification":                                                                                       "Interactive event : Scheduled Notification",
+            "Interactive event : Instant Notification":                                                                                         "Interactive event : Instant Notification",
+            "PREVIEW":                                                                                                                          "PREVIEW",
+            "There is no valid video to preview.":                                                                                              "There is no valid video to preview.",
+            "Display text":                                                                                                                     "Display text",
+            "Input display text":                                                                                                               "Input display text",
+            "Button text":                                                                                                                      "Button text",
+            "Input button text":                                                                                                                "Input button text",
+            "Mobile Notification and Time":                                                                                                     "Mobile Notification and Time",
+            "iOS":                                                                                                                              "iOS",
+            "iOS-button": {
+                "Cancel":                                                                                                                       "Cancel",
+                "OK":                                                                                                                           "OK"
+            },
+            "Android":                                                                                                                          "Android",
+            "Preview":                                                                                                                          "Preview",
+            "Notification":                                                                                                                     "Notification",
+            "Mobile notification message":                                                                                                      "Mobile notification message",
+            "Input Mobile notification message":                                                                                                "Input Mobile notification message",
+            "Recommend: less 34 bytes":                                                                                                         "Recommend: less 34 bytes",
+            "Mobile notification time":                                                                                                         "Mobile notification time",
+            "Add a mobile notification time to remind your viewers.":                                                                           "Add a mobile notification time to remind your viewers.",
+            "Hour":                                                                                                                             "Hour",
+            "Minute":                                                                                                                           "Minute",
+            "Mobile Notification Message":                                                                                                      "Mobile Notification Message",
+            "The mobile notification will instant send, when user pressed OK or Enter.":                                                        "The mobile notification will instant send, when user pressed OK or Enter."
+        }
+    },
     "episode-list": {
         "html-title": {
             "9x9.tv - Episode list":                                                                                                            "9x9.tv - Episode list"
         },
         "func-nav": {
             "Episode list":                                                                                                                     "Episode list",
+            "Channel POI":                                                                                                                      "Channel POI",
             "Settings":                                                                                                                         "Settings"
         },
         "title-func": {
