sharing url commit episode-list.html
signin.js remove reset password //

git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@4840 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/lang/en.json
+++ b/lang/en.json
@@ -471,6 +471,8 @@
             "Edit":                                                                                                                             "Edit",
             "Delete":                                                                                                                           "Delete",
             "Get URL": "Get URL",
+            "Brand": "Brand",
+            "URL": "URL",
             "Draft":                                                                                                                            "Draft",
             "Curate new episode to tell a story":                                                                                               "Curate new episode to tell a story",
             "<strong>Curate online videos</strong> into each single episode.":                                                                  "<strong>Curate online videos</strong> into each single episode.",
