--- a/lang/zh.json
+++ b/lang/zh.json
@@ -471,6 +471,8 @@
             "Edit":                                                                                                                             "編輯",
             "Delete":                                                                                                                           "刪除",
             "Get URL": "網址",
+            "Brand": "品牌",
+            "URL": "網址",
             "Draft":                                                                                                                            "草稿",
             "Curate new episode to tell a story":                                                                                               "策展新節目",
             "<strong>Curate online videos</strong> into each single episode.":                                                                  "在一集節目中<strong>輕鬆策展多個影片</strong>。",
