channel sharing url
git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@4841 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/lang/en.json
+++ b/lang/en.json
@@ -315,6 +315,9 @@
             "Save order":                                                                                                                       "Save order"
         },
         "channel-list": {
+            "Get URL": "Get URL",
+            "Brand": "Brand",
+            "URL": "URL",
             "Episodes":                                                                                                                         "Episodes",
             "Followers":                                                                                                                        "Followers",
             "Views":                                                                                                                            "Views",
