1. fix upload MSO logo limit size < 500K 2. update channel setting message 3. add Preview to portal-manage.html 4. move some function form basic.js to channel.js / episode.js
git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@4884 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/lang/en.json
+++ b/lang/en.json
@@ -411,7 +411,7 @@
             "Tags": "Tags",
             "Separate with commas": "Separate with commas",
             "Suggested Tags:": "Suggested Tags:",
-            "Auto share new published episode": "Auto share new published episode",
+            "Select brand to auto share": "Select brand to auto share",
             "Timeline": "Timeline",
             "Page": "Page",
             "Select facebook pages": "Select facebook pages",
