--- a/lang/zh.json
+++ b/lang/zh.json
@@ -411,7 +411,7 @@
             "Tags": "標籤",
             "Separate with commas": "用逗號分隔",
             "Suggested Tags:": "熱門標籤:",
-            "Auto share new published episode": "自動分享新發佈<br />的節目",
+            "Select brand to auto share": "選擇品牌自動分享<br />新節目",
             "Timeline": "動態時報",
             "Page": "粉絲專頁",
             "Select facebook pages": "選擇facebook粉絲專頁",
